--- a/src/main/webapp/resources/css/admin/sb-admin-2.css
+++ b/src/main/webapp/resources/css/admin/sb-admin-2.css
@@ -38,6 +38,7 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
+  font-size:16px !important;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
