fix supper big bug that need 3 hours to resolve

--- a/src/main/webapp/resources/css/admin/sb-admin-2.css
+++ b/src/main/webapp/resources/css/admin/sb-admin-2.css
@@ -11268,3 +11268,7 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+.topbar .dropdown .dropdown-menu.active{
+display:block;
+}
+
