--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -300,3 +300,59 @@ user-select: none;
 background-color: white;
 }
 
+ #myCustomToast {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.3);
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.2s ease-in-out;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index:10000;
+      }
+      .custom-toast-content {
+        min-width: 30vw;
+        min-height: 30vh;
+        padding: 20px;
+        background-color: white;
+        border-radius: 20px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        border-left: 5px solid var(--primary-color);
+        display: flex;
+        flex-direction: column;
+        transition: all 0.3s ease-in-out;
+        opacity: 0;
+        transform: translateY(-20%);
+      }
+      .custom-toast-content > .heading {
+        text-align: center;
+        margin: 10px 0;
+        text-transform: uppercase;
+        color: rgb(146, 143, 143);
+      }
+      .custom-toast-content > .body {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .custom-toast-content > .body > .text-center {
+        font-size: 50px;
+        font-weight: bold;
+        padding-bottom: 20px;
+        color: var(--primary-color);
+      }
+      #myCustomToast.active {
+        visibility: visible;
+        opacity: 1;
+      }
+      #myCustomToast.active > .custom-toast-content {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
