--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -761,3 +761,12 @@
   margin-bottom: 20px;
   flex-direction: column;
 }
+
+
+.video-item{
+margin: 0 auto;
+ object-fit: cover;
+  max-height: 100%;
+  max-width: 100%;
+
+}
