--- a/src/main/webapp/resources/css/post.css
+++ b/src/main/webapp/resources/css/post.css
@@ -109,7 +109,8 @@
   color: white;
 }
 #video-tag {
-  width: 100%;
+  max-width: 100%;
+  max-height: 70vh;
   object-fit: cover;
   display: block;
   margin: 0 auto;
@@ -124,6 +125,8 @@
 }
 .upload__video-wrap {
   position: relative;
+  background-color: black;
+  min-height: 40vh;
 }
 .video-placeholder.hide {
   display: none;
@@ -155,4 +158,12 @@ p.form-title {
   margin: 20px 0;
   text-transform: uppercase;
   color: rgb(99, 90, 90);
+}
+.upload_videoFile{
+width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
