--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -359,4 +359,26 @@ background-color: white;
       .post{
       padding: 0 ;
       }
+.btn.btn-link.btn-noti{
+color: inherit;
+text-decoration: none;
+font-size: 2rem;
 
+}
+.card{
+margin: 20px 0;
+background-color: white;
+border:none;
+border-left: 6px solid var(--primary-color);
+box-shadow: 0 0 10px 1px rgba(0,0,0,0.04);
+border-radius: 6px;
+}
+.card-header{
+background-color: white;
+}
+.card-header{
+border-bottom: 1px solid rgba(0,0,0,0.05);
+}
+.btn.focus, .btn:focus{
+box-shadow: none;
+}
