--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -48,8 +48,6 @@ label.btn {
 }
 .nav-control {
  border: 1px solid rgb(238, 232, 232);
-  border-radius: 12px;
-  overflow: hidden;
 }
 .list-group {
   width: 100%;
@@ -60,9 +58,11 @@ label.btn {
 }
 .list-group-item.active {
   background: var(--primary-color);
+  border-color: transparent;
 }
 .list-group-item:hover {
   background-color: var(--primary-color);
+  color:white;
 }
 a:hover {
   color: #333;
@@ -360,25 +360,96 @@ background-color: white;
       padding: 0 ;
       }
 .btn.btn-link.btn-noti{
+width:80%;
 color: inherit;
 text-decoration: none;
 font-size: 2rem;
+margin-right: 130px;
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+text-align:left;
 
 }
 .card{
 margin: 20px 0;
 background-color: white;
 border:none;
-border-left: 6px solid var(--primary-color);
 box-shadow: 0 0 10px 1px rgba(0,0,0,0.04);
-border-radius: 6px;
+border-radius: 0;
 }
 .card-header{
+position: relative;
 background-color: white;
+border-right: 6px solid var(--primary-color);
 }
 .card-header{
 border-bottom: 1px solid rgba(0,0,0,0.05);
+padding: 1rem 1.25rem;
 }
 .btn.focus, .btn:focus{
 box-shadow: none;
 }
+.time-label{
+position: absolute;
+right: 10px;
+top: 0px;
+bottom: 0px;
+border-left: 1px solid rgba(0,0,0,0.1);
+display:flex;
+align-items:center;
+justify-content: center;
+flex-direction:column;
+padding: 3px 10px;
+font-size: 1.6rem;
+}
+.time-label > span{
+margin: 2px 0;
+}
+.card-header:hover .title-full{
+transform: translateY(0);
+visibility:visible;
+opacity:1;
+}
+.title-full{
+position: absolute;
+width: 82%;
+bottom: 110%;
+left: 0;
+border-radius: 12px;
+background-color: white;
+box-shadow: 0 0 10px 2px rgba(0,0,0,0.05);
+padding: 10px 20px;
+line-height: 28px;
+color: rgba(0,0,0,0.6);
+transition: all 0.3s ease;
+visibility:hidden;
+opacity: 0;
+transform: translateY(50%);
+}
+.accordion>.card{
+overflow:visible;
+}
+.card.readed > .card-header{
+    color: rgba(0,0,0,0.6);
+    border-color: #ccc;
+}
+.card.readed  .card-body{
+   color: rgba(0,0,0,0.6);
+}
+.noti-icon{
+position: absolute;
+right: 5%;
+top: 50%;
+transform: translateY(-50%);
+width: 30px;
+height: 30px;
+border-radius: 50%;
+background-color: rgba(0,0,0,0.08);
+display:flex;
+justify-content: center;
+align-items:center;
+color:white !important;
+background-color: var(--red);
+}
+
