--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -452,4 +452,76 @@ align-items:center;
 color:white !important;
 background-color: var(--red);
 }
+      #full-stars-example {
+      background-color: white;
+      border-radius: 12px;
+      display:flex;
+      justify-content: center;
+      align-items:center;
+      padding: 20px 0 10px 0;
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+      flex-direction: column;
+      margin-bottom: 20px;
+      }
+      #full-stars-example .rating-group {
+        display: inline-flex;
+      }
+      #full-stars-example .rating__icon {
+        pointer-events: none;
+      }
+      #full-stars-example .rating__input {
+        position: absolute !important;
+        left: -9999px !important;
+      }
+      #full-stars-example .rating__label {
+        cursor: pointer;
+        padding: 0 0.1em;
+        font-size: 3rem;
+      }
+      #full-stars-example .rating__icon--star {
+        color: orange;
+      }
+      #full-stars-example .rating__icon--none {
+        color: #eee;
+      }
+      #full-stars-example
+        .rating__input--none:checked
+        + .rating__label
+        .rating__icon--none {
+        color: red;
+      }
+      #full-stars-example
+        .rating__input:checked
+        ~ .rating__label
+        .rating__icon--star {
+        color: #ddd;
+      }
+      #full-stars-example
+        .rating-group:hover
+        .rating__label
+        .rating__icon--star {
+        color: orange;
+      }
+      #full-stars-example
+        .rating__input:hover
+        ~ .rating__label
+        .rating__icon--star {
+        color: #ddd;
+      }
+      #full-stars-example
+        .rating-group:hover
+        .rating__input--none:not(:hover)
+        + .rating__label
+        .rating__icon--none {
+        color: #eee;
+      }
+      #full-stars-example
+        .rating__input--none:hover
+        + .rating__label
+        .rating__icon--none {
+        color: red;
+      }
+
+
+
 
