--- a/src/main/webapp/resources/css/post.css
+++ b/src/main/webapp/resources/css/post.css
@@ -138,7 +138,7 @@
   bottom: 0;
   right: 0;
   background: white;
-  z-index: -1;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,5 +166,21 @@ width: 0.1px;
     overflow: hidden;
     position: absolute;
     z-index: -1;
+}
+.close-video{
+position: absolute;
+top: 10px;
+right: 10px;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background-color: rgba(255,255,255,0.2);
+display:flex;
+justify-content:center;
+align-items:center;
+}
+.close-video span{
+font-size: 3rem;
+color: red;
 }
 
