--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -769,4 +769,26 @@ margin: 0 auto;
   max-height: 100%;
   max-width: 100%;
 
+}      #instruction {
+         position: fixed;
+         top: 50%;
+         left: 80px;
+         transform: translateY(-50%);
+         z-index: 100;
+       }
+.text-effect{
+  border: 3px solid #fff;
+  border-radius: 12px;
+  padding:10px 20px;
+  font-size: 2rem;
+  box-shadow: 0 0 20px 0 rgba(0,0,0,0.1);
+   -webkit-backdrop-filter: blur(5px);
+   backdrop-filter: blur(5px);
+   font-weight: bold;
+   text-transform: uppercase;
+   color: var(--primary-color);
+   background-color: white;
 }
+
+
+
