--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -775,6 +775,7 @@ margin: 0 auto;
          left: 80px;
          transform: translateY(-50%);
          z-index: 100;
+         cursor: pointer;
        }
 .text-effect{
   border: 3px solid #fff;
